--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.gnr.esgi.googlenewsreader"
+        applicationId "com.gnr.esgi.taggle"
         minSdkVersion 11
         targetSdkVersion 22
         versionCode 1
